--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
           <div class="col-md-3">
             <div class="character-card" data-character="ironclad">
               <img
-                src="images/ironclad.png"
+                src="images/ironclad.PNG"
                 alt="Ironclad"
                 class="character-img"
               />
