--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     ></section>
 
     <!-- Redirect logic -->
-    <script src="./js/final.js"></script>
+    <script src="js/final.js"></script>
   </body>
 </html>
