--- a/about.html
+++ b/about.html
@@ -131,8 +131,8 @@
       <div class="container"><p class="mb-0">© 2025 Xiang You</p></div>
     </footer>
     <!-- Scripts -->
-    <script src="/js/jquery.js"></script>
-    <script src="/js/final.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/final.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
