--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/jquery.js"></script>
-    <script src="/js/final.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/final.js"></script>
   </body>
 </html>
