--- a/skill.html
+++ b/skill.html
@@ -226,8 +226,8 @@
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0/min.js"></script>
-    <script src="./js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/final.js"></script>
+    <script src="js/final.js"></script>
   </body>
 </html>
