--- a/about.html
+++ b/about.html
@@ -36,22 +36,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/home.html">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About Me</a>
+              <a class="nav-link" href="about.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project.html">Projects</a>
+              <a class="nav-link" href="project.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/skill.html">Skills</a>
+              <a class="nav-link" href="skill.html">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/interests.html">Interests</a>
+              <a class="nav-link" href="interests.html">Interests</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
