--- a/contact.html
+++ b/contact.html
@@ -40,19 +40,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/home.html">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About Me</a>
+              <a class="nav-link" href="about.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project.html">Projects</a>
+              <a class="nav-link" href="project.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/skill.html">Skills</a>
+              <a class="nav-link" href="skill.html">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
